[project]
name = "enrichment-api"
version = "0.1.0"
description = "Autonomous Data Enrichment API for marketplace deployment"
authors = [
    {name = "Firas Mosbahi"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "instructor (>=1.14.5,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "mcp (>=1.26.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "anthropic (>=0.83.0,<0.84.0)",
    "stripe (>=14.3.0,<15.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "redis (>=7.2.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
